force-app/main/default/objects/Engagement__c/Engagement__c.object-meta.xml
<CustomObject>
    <description>A client engagement / project. Root of the delivery hierarchy (phases, milestones, work, time, billing). Record types distinguish commercial models.</description>
    <label>Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>