force-app/main/default/objects/Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Client account this engagement is delivered for.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>