force-app/main/default/objects/Engagement__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <description>Approved budget for the engagement.</description>
    <label>Budget Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>