force-app/main/default/objects/Engagement__c/fields/Client_Profile__c.field-meta.xml
<CustomField>
    <fullName>Client_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related client profile (Client Management module).</description>
    <label>Client Profile</label>
    <referenceTo>ClientProfile__c</referenceTo>
    <relationshipLabel>Engagements</relationshipLabel>
    <relationshipName>Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>