force-app/main/default/objects/Engagement__c/fields/Engagement_Manager__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User accountable for delivering the engagement.</description>
    <label>Engagement Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Managed Engagements</relationshipLabel>
    <relationshipName>Managed_Engagements</relationshipName>
    <type>Lookup</type>
</CustomField>