force-app/main/default/objects/Engagement__c/fields/Health__c.field-meta.xml
<CustomField>
    <fullName>Health__c</fullName>
    <description
  >Traffic-light health derived from schedule position and status. Formula field.</description>
    <formula
  >IF(ISPICKVAL(Status__c, &quot;Closed&quot;), &quot;Complete&quot;, IF(ISPICKVAL(Status__c, &quot;On Hold&quot;), &quot;Amber&quot;, IF(AND(NOT(ISBLANK(End_Date__c)), End_Date__c &lt; TODAY(), NOT(ISPICKVAL(Status__c, &quot;Closing&quot;))), &quot;Red&quot;, &quot;Green&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Health</label>
    <type>Text</type>
</CustomField>