force-app/main/default/objects/Engagement__c/fields/Phase_Count__c.field-meta.xml
<CustomField>
    <fullName>Phase_Count__c</fullName>
    <description>Number of phases in the engagement.</description>
    <label>Phase Count</label>
    <summaryForeignKey>EngagementPhase__c.Engagement__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>