force-app/main/default/objects/Engagement__c/fields/Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Planned_Hours__c</fullName>
    <description>Total planned effort in hours for the engagement.</description>
    <label>Planned Hours</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>