force-app/main/default/objects/Engagement__c/fields/Total_Planned_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Hours__c</fullName>
    <description>Sum of planned hours across all phases.</description>
    <label>Total Planned Hours</label>
    <summarizedField>EngagementPhase__c.Planned_Hours__c</summarizedField>
    <summaryForeignKey>EngagementPhase__c.Engagement__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>