force-app/main/default/objects/Engagement__c/recordTypes/Fixed_Price.recordType-meta.xml
<RecordType>
    <fullName>Fixed_Price</fullName>
    <active>true</active>
    <description
  >Fixed-price engagement billed on milestone completion.</description>
    <label>Fixed Price</label>
</RecordType>