force-app/main/default/objects/Engagement__c/recordTypes/Retainer.recordType-meta.xml
<RecordType>
    <fullName>Retainer</fullName>
    <active>true</active>
    <description>Recurring retainer engagement billed on a fixed cadence.</description>
    <label>Retainer</label>
</RecordType>