force-app/main/default/objects/Engagement__c/recordTypes/Time_And_Materials.recordType-meta.xml
<RecordType>
    <fullName>Time_And_Materials</fullName>
    <active>true</active>
    <description
  >Time-and-materials engagement billed on approved time entries.</description>
    <label>Time and Materials</label>
</RecordType>