force-app/main/default/objects/Engagement__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <description>End Date cannot be earlier than Start Date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Start_Date__c)), NOT(ISBLANK(End_Date__c)), End_Date__c &lt; Start_Date__c)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date cannot be earlier than Start Date.</errorMessage>
</ValidationRule>